# rust-ipv4-dns-resolver

./: Cargo.toml  readme.md
src/: consumer.rs  main.rs  producer.rs  shared_buffer.rs
